--- a/src/Churchee.Module.Identity/Areas/Account/Pages/LoginWith2fa.cshtml
+++ b/src/Churchee.Module.Identity/Areas/Account/Pages/LoginWith2fa.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model Churchee.Module.Identity.Areas.Account.Pages.LoginWith2faModel
+@model Churchee.Module.Identity.Areas.Account.Pages.LoginWith2FaModel
 @{
     ViewData["Title"] = "Two-factor authentication";
     Layout = "./_LoginLayout";
