--- a/src/Churchee.Module.Identity/Areas/Profile/Pages/MultiFactorAuthentication.razor
+++ b/src/Churchee.Module.Identity/Areas/Profile/Pages/MultiFactorAuthentication.razor
@@ -1,7 +1,7 @@
 ﻿@page "/management/profile/mfa"
 @inherits BasePage
 @using System.Globalization
-@using Churchee.Module.Identity.Options
+@using Churchee.Module.Identity.Configuration
 @using Microsoft.AspNetCore.Identity.UI
 @using Microsoft.Extensions.Logging
 
