--- a/src/Churchee.Module.UI/wwwroot/scss/_variable-overrides.scss
+++ b/src/Churchee.Module.UI/wwwroot/scss/_variable-overrides.scss
@@ -17,3 +17,4 @@ $rz-success: #03c183;
 $header-background-color: #286875;
 $profile-menu-top-item-background-color: #286875;
 $layout-body-background-color: #e0e9f2;
+$form-field-helper-padding: 0;
