--- a/src/Churchee.Module.X/Areas/Integrations/Pages/X.razor
+++ b/src/Churchee.Module.X/Areas/Integrations/Pages/X.razor
@@ -15,13 +15,38 @@
 
 <PageName></PageName>
 
+<div style="max-width: 900px; margin: 40px auto;">
+
+    <RadzenStack Orientation="Orientation.Horizontal" AlignItems="AlignItems.Center" Gap="16" class="rz-m-5">
+
+        <svg style="width: 100px;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640"><!--!Font Awesome Free v7.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2026 Fonticons, Inc.--><path fill="000" d="M160 96C124.7 96 96 124.7 96 160L96 480C96 515.3 124.7 544 160 544L480 544C515.3 544 544 515.3 544 480L544 160C544 124.7 515.3 96 480 96L160 96zM457.1 180L353.3 298.6L475.4 460L379.8 460L305 362.1L219.3 460L171.8 460L282.8 333.1L165.7 180L263.7 180L331.4 269.5L409.6 180L457.1 180zM419.3 431.6L249.4 206.9L221.1 206.9L392.9 431.6L419.3 431.6z" /></svg>
+        <RadzenStack>
+            <RadzenText TextStyle="TextStyle.H4" Text="X/Twitter Integration" />
+            <RadzenText TextStyle="TextStyle.Body2" Style="color: var(--rz-text-secondary); max-width: 600px;">
+                Pull your posts from X/Twitter and display them on your website.
+            </RadzenText>
+        </RadzenStack>
+        @if (isConfigured)
+        {
+            <RadzenBadge BadgeStyle="BadgeStyle.Success" Text="Active" />
+        }
+        else
+        {
+            <RadzenBadge BadgeStyle="BadgeStyle.Base" Text="Inactive" />
+        }
+
+    </RadzenStack>
+
+    <hr style="color: #eee; margin: 1rem 0" />
+
+
 @if (isConfigured)
 {
     <div>
 
         @if (lastRun != null)
         {
-            <b>Last Run: @lastRun.Value.ToShortDateString()</b>
+                <b>Last Run: @lastRun.Value.ToString("dd/MM/yyyy HH:mm")</b>
         }
 
         <RadzenStack Orientation="Orientation.Vertical" JustifyContent="JustifyContent.Center">
@@ -37,21 +62,10 @@
 
 else
 {
-    <RadzenRow Gap="1rem">
-        <RadzenColumn class="rz-p-5">
-            <Form InputModel="@InputModel" OnSave=@(async () => await ValidSubmitForm())>
-            </Form>
-        </RadzenColumn>
-        <RadzenColumn class="rz-p-5">
-
-            <h3>Configuration Instructions</h3>
-
-
-
-        </RadzenColumn>
-    </RadzenRow>
+    <Form ButtonsOnTop="false" InputModel="@InputModel" OnSave=@(async () => await ValidSubmitForm()) />
 }
 
+</div>
 
 @code{
 
