Fixes sonar issues

--- a/src/Churchee.Module.UI/Components/FormFields.razor
+++ b/src/Churchee.Module.UI/Components/FormFields.razor
@@ -308,7 +308,7 @@
                                         }
 
                                         @if (!string.IsNullOrEmpty(displayAttribute?.Description) && !hasValidationMessages){
-                                            <div style="color:#737477; font-size: 13px; margin-top: 4px;">@displayAttribute?.Description</div>
+                                            <div style="color:#737477; font-size: 13px; margin-top: 4px;">@displayAttribute.Description</div>
                                        }
 
                                         @if (dataType != DataTypes.Hidden)
