--- a/src/Churchee.Module.Facebook.Events/Areas/Integrations/Pages/FacebookEvents.razor
+++ b/src/Churchee.Module.Facebook.Events/Areas/Integrations/Pages/FacebookEvents.razor
@@ -1,4 +1,5 @@
 ﻿@page "/management/integrations/facebook-events"
+@inherits BasePage
 @using Churchee.Module.Events.Features.Commands
 @using Microsoft.AspNetCore.Http
 @using Microsoft.Extensions.Logging
@@ -12,13 +13,10 @@
 @using Churchee.Common.Abstractions.Auth
 @using Churchee.Module.Facebook.Events.Features.Queries
 @using Churchee.Module.Facebook.Events.Features.Commands
-@inject ILogger<FacebookEvents> Logger
-@inject IMediator Mediator
 @inject ICurrentUser _currentUser
 @inject IHttpContextAccessor _httpContextAccessor
-@inject NavigationManager NavigationManager
 
-<PageName></PageName>
+<PageName Name="Facebook Events Integration"></PageName>
 
 <div style="max-width: 900px; margin: 40px auto;">
 
@@ -52,14 +50,14 @@
         <RadzenStack Orientation="Orientation.Vertical" JustifyContent="JustifyContent.Center">
             <h1>Facebook Events Sync is set up!</h1>
 
-            <RadzenButton Click=@(args => DisableSync()) Text="Disable Sync" ButtonStyle="ButtonStyle.Danger" Icon="sync_disabled" />
-            <RadzenButton Click=@(args => SyncNow()) Text="Sync Now" ButtonStyle="ButtonStyle.Primary" Icon="sync" />
+            <RadzenButton Click=@(args => DisableSync()) Text="Disable Sync" ButtonStyle="ButtonStyle.Danger" Icon="sync_disabled" id="disableSync" />
+            <RadzenButton Click=@(args => SyncNow()) Text="Sync Now" ButtonStyle="ButtonStyle.Primary" Icon="sync" id="syncNow" />
 
         </RadzenStack>
     }
     else
     {
-            <Form ButtonsOnTop="false" InputModel="@InputModel" OnSave=@(async () => await ValidSubmitForm("Enable")) />
+            <Form ButtonsOnTop="false" InputModel="@InputModel" OnSave=@(async () => await ValidSubmitForm()) />
     }
 
 </div>
@@ -69,9 +67,6 @@
 
     public InputModel InputModel { get; set; } = new();
 
-    [Inject]
-    private NotificationService _notificationService { get; set; }
-
     public bool Linked { get; set; } = false;
 
     protected override async Task OnInitializedAsync()
@@ -79,26 +74,13 @@
         Linked = await Mediator.Send(new FacebookConfiguredQuery());
     }
 
-    private async Task ValidSubmitForm(string submit)
+    private async Task ValidSubmitForm()
     {
-        if (submit == "Enable")
-        {
-            var request = _httpContextAccessor.HttpContext.Request;
+        var request = _httpContextAccessor.HttpContext.Request;
 
-            string redirectUrl = await Mediator.Send(new GetAuthUrlQuery($"{request.Scheme}://{request.Host}", InputModel.FacebookPageId));
+        string redirectUrl = await Mediator.Send(new GetAuthUrlQuery($"{request.Scheme}://{request.Host}", InputModel.FacebookPageId));
 
-            NavigationManager.NavigateTo(redirectUrl, true);
-        }
-        else
-        {
-            var createEventsResult = await Mediator.Send(new ActivateEventsCommand(await _currentUser.GetApplicationTenantId()));
-
-            if (createEventsResult.IsSuccess)
-            {
-                await Mediator.Send(new SyncFacebookEventsToEventsTableCommand());
-            }
-
-        }
+        NavigationManager.NavigateTo(redirectUrl, true);
     }
 
     private async Task SyncNow()
@@ -112,9 +94,9 @@
 
         var syncResponse = await Mediator.Send(new SyncFacebookEventsToEventsTableCommand());
 
-        if (!syncResponse.IsSuccess)
+        if (syncResponse.IsSuccess)
         {
-            _notificationService.Notify(NotificationSeverity.Success, "Sync Completed");
+            NotificationService.Notify(NotificationSeverity.Success, "Facebook Sync Queued");
         }
     }
 
@@ -127,7 +109,7 @@
         {
             Linked = false;
 
-            _notificationService.Notify(NotificationSeverity.Success, "Integration Disabled");
+            NotificationService.Notify(NotificationSeverity.Success, "Integration Disabled");
 
             InputModel = new InputModel();
 
