YouTube Razor Page and other Tests

--- a/src/Churchee.Module.Facebook.Events/Areas/Integrations/Pages/FacebookEvents.razor
+++ b/src/Churchee.Module.Facebook.Events/Areas/Integrations/Pages/FacebookEvents.razor
@@ -115,6 +115,10 @@
 
             StateHasChanged();
         }
+        else
+        {
+            NotificationService.Notify(NotificationSeverity.Error, "Failed to disable Integration");
+        }
     }
 
 }
