- Added Code Block Insert for Articles Content Editor (with CSS admend) - Removed Duplication from FormFields Componant by extracting inards to FormFieldItem.razor - Validation/Pipleine Fixes for Responses that inherit from CommandResponse

--- a/src/Churchee.Module.Events/Areas/Website/Pages/Events/Edit.razor
+++ b/src/Churchee.Module.Events/Areas/Website/Pages/Events/Edit.razor
@@ -35,7 +35,7 @@
             <RadzenTabs RenderMode="TabRenderMode.Client" class="pageEdit-tabs">
                 <Tabs>
                     <RadzenTabsItem Text="Details">
-                        <FormFields EditContext="_editContext" FormInvalid="_formInvalid" InputModel="InputModel" Properties="@InputModel.GetType().GetProperties().Where(x => x.CanWrite && x.Name != "Dates")" OnValueChanged=UpdateFormState></FormFields>
+                        <FormFields EditContext="_editContext" InputModel="InputModel" Properties="@InputModel.GetType().GetProperties().Where(x => x.CanWrite && x.Name != "Dates")" OnValueChanged=UpdateFormState></FormFields>
                     </RadzenTabsItem>
 
                     <RadzenTabsItem Text="Dates">
