--- a/src/Churchee.Module.Site/Areas/Site/Pages/Pages/Edit.razor
+++ b/src/Churchee.Module.Site/Areas/Site/Pages/Pages/Edit.razor
@@ -48,7 +48,7 @@
         <RadzenTabs RenderMode="TabRenderMode.Client" class="pageEdit-tabs">
             <Tabs>
                     <RadzenTabsItem Text="Info">
-                        <FormFields EditContext="_editContext" FormInvalid="_formInvalid" InputModel="InputModel" Properties="@InputModel.GetType().GetProperties().Where(x => x.CanWrite && x.Name != "ContentItems")" OnValueChanged=SetFormInvalidState></FormFields>
+                        <FormFields EditContext="_editContext" InputModel="InputModel" Properties="@InputModel.GetType().GetProperties().Where(x => x.CanWrite && x.Name != "ContentItems")" OnValueChanged=SetFormInvalidState></FormFields>
                     </RadzenTabsItem>
 
                     <RadzenTabsItem Text="Content">
