--- a/src/Churchee.Module.UI/Components/ModalForm.razor
+++ b/src/Churchee.Module.UI/Components/ModalForm.razor
@@ -15,7 +15,7 @@
     <EditForm EditContext="@_editContext" OnSubmit="HandleSubmit">
         <DataAnnotationsValidator />
 
-        <FormFields FormInvalid="_formInvalid" SubmitClicked="_submitClicked" InputModel="InputModel" Properties="@InputModel.GetType().GetProperties().Where(x => x.CanWrite)" OnValueChanged=UpdateFormState EditContext="_editContext"></FormFields>
+        <FormFields InputModel="InputModel" Properties="@InputModel.GetType().GetProperties().Where(x => x.CanWrite)" OnValueChanged=UpdateFormState EditContext="_editContext"></FormFields>
             <div class="rz-mt-5">
                 <div class="sticky-formButtons">
 
@@ -52,8 +52,6 @@
     [Parameter]
     public EventCallback<object> OnChange { get; set; }
 
-    private bool _submitClicked;
-
     private bool _formInvalid;
 
     private EditContext _editContext { get; set; } = default!;
@@ -86,8 +84,6 @@
     {
         try
         {
-            _submitClicked = true;
-
             if (_editContext.Validate())
             {
                 Logger.LogInformation("HandleValidSubmit");
