Work in Image Chunk COntrol

--- a/src/Churchee.Module.Site/Areas/Site/Pages/Articles/Edit.razor
+++ b/src/Churchee.Module.Site/Areas/Site/Pages/Articles/Edit.razor
@@ -67,7 +67,12 @@
             Content = data.Content ?? string.Empty,
             Title = data.Title ?? string.Empty,
             Description = data.Description ?? string.Empty,
-            PublishOnDate = data.PublishOnDate
+            PublishOnDate = data.PublishOnDate,
+            Image = new Common.ValueTypes.ChunkedImageUploadType
+            {
+                Description = data.ImageAltTag,
+                ThumbnailUrl = $"{TenantResolver.GetCDNPrefix()}/{data.ImageThumbnail}"
+            }
         };
     }
 
