--- a/src/Churchee.Module.UI/Components/ChunkedImageUpload.razor
+++ b/src/Churchee.Module.UI/Components/ChunkedImageUpload.razor
@@ -14,8 +14,8 @@
 
 <RadzenFormField Text="Image" AllowFloatingLabel="false">
   <ChildContent>
-       
-    <RadzenStack> 
+
+      <div>
 
             @if (uploadProgress > 0 && uploadProgress < 100)
             {
@@ -26,32 +26,41 @@
                 <RadzenProgressBar ProgressBarStyle="ProgressBarStyle.Success" Value="100" ShowValue="false" />
             }
 
-            <div class="rz-p-4">
+            <RadzenStack Orientation="Orientation.Horizontal" AlignItems="AlignItems.Center">
+                    <img class="rz-m-7" src="@Model.ThumbnailUrl" width="200" />
 
-                <RadzenUpload Change="HandleFileUpload" Auto="false" Multiple="false" />
+                <RadzenStack Style="width:100%"> 
 
-                <small>@status</small>
+                        <div class="rz-p-4">
 
-                <RadzenFormField Text="Description" AllowFloatingLabel="false" Style="width:100%">
+                            <RadzenUpload Change="HandleFileUpload" Auto="false" Multiple="false" />
 
-                    <ChildContent>
+                            <small>@status</small>
 
-                    <div style="display: flex; align-items: center;">
-                            <RadzenTextBox Style="width: 100%" @bind-Value="@Model.Description" Change="OnDescriptionChange"/>
-                            <RadzenProgressBarCircular Visible="generating" Mode="ProgressBarMode.Indeterminate" Size="ProgressBarCircularSize.ExtraSmall" Style="margin-right: 1rem">
-                                <Template>AI</Template> 
-                            </RadzenProgressBarCircular>
-                    </div>
+                            <RadzenFormField Text="Description" AllowFloatingLabel="false" Style="width:100%">
 
-                    </ChildContent>
-                    <Helper>
-                        <ValidationMessage For="() => Model.Description" />
-                    </Helper>
+                                <ChildContent>
 
-                </RadzenFormField>
-            </div>
+                                <div style="display: flex; align-items: center;">
+                                        <RadzenTextBox Style="width: 100%" @bind-Value="@Model.Description" Change="OnDescriptionChange"/>
+                                        <RadzenProgressBarCircular Visible="generating" Mode="ProgressBarMode.Indeterminate" Size="ProgressBarCircularSize.ExtraSmall" Style="margin-right: 1rem">
+                                            <Template>AI</Template> 
+                                        </RadzenProgressBarCircular>
+                                </div>
 
-    </RadzenStack>
+                                </ChildContent>
+                                <Helper>
+                                    <ValidationMessage For="() => Model.Description" />
+                                </Helper>
+
+                            </RadzenFormField>
+                        </div>
+
+                </RadzenStack>
+            </RadzenStack>
+        </div>
+
   </ChildContent>
 
 </RadzenFormField>
+
